# SQRS_Project-Simple-Notes-App

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
simple_notes_app/: .env.example  .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
simple_notes_app/.streamlit/: config.toml
simple_notes_app/app/: main.py
simple_notes_app/app/api/: auth.py  notes.py  translation.py
simple_notes_app/app/core/: database.py  security.py
simple_notes_app/app/db/: notes.db
simple_notes_app/app/dependencies/: auth.py
simple_notes_app/app/models/: notes.py  translations.py  user.py
simple_notes_app/app/schemas/: note.py  temporarly.txt  user.py
simple_notes_app/app/services/: note_service.py  temporarly.txt  translation_service.py
simple_notes_app/app/templates/: login.html  notes.html  register.html
simple_notes_app/env/: pyvenv.cfg
simple_notes_app/performance/: locustfile.py
simple_notes_app/selenium/: test_selenium.py
simple_notes_app/streamlit_app/: Home.py  utils.py
simple_notes_app/streamlit_app/pages/: Notes.py  Register.py
simple_notes_app/tests/: test_api.py  test_sample.py
simple_notes_app/tests/performance/: locustfile.py
simple_notes_app/tests/ui/: test_selenium.py
simple_notes_app/tests/unit/: test_api.py  test_st.py
