[tool.poetry]
name = "simple-notes-app"
version = "0.1.0"
description = ""
authors = [
    "Anushervon Qodirzoda <a.qodirzoda@innopolis.university>",
    "Iliyas Dzhabbarov <i.dzhabbarov@innopolis.university>",
    "Muhammad Allayarov <m.allayarov@innopolis.university>",
]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.115.12"
uvicorn = "0.34.2"
bcrypt = ">=4.3.0,<5.0.0"
sqlalchemy = "2.0.40"
python-jose = "3.4.0"
passlib = "1.7.4"
pydantic = "2.11.4"
python-multipart = "0.0.20"
annotated-types = "0.7.0"
anyio = "4.9.0"
click = "8.1.8"
dnspython = "2.7.0"
ecdsa = "0.19.1"
email-validator = "2.2.0"
flake8 = "7.2.0"
greenlet = "3.2.1"
h11 = "0.16.0"
idna = "3.10"
iniconfig = "2.1.0"
mccabe = "0.7.0"
packaging = "^24.0"
pluggy = "1.5.0"
pyasn1 = "0.4.8"
pycodestyle = "2.13.0"
pydantic-core = "2.33.2"
pyflakes = "3.3.2"
pytest = "8.3.5"
rsa = "4.9.1"
six = "1.17.0"
sniffio = "1.3.1"
starlette = "0.46.2"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"
bandit = "^1.8.3"
radon = "^6.0.1"
interrogate = "^1.7.0"
python-dotenv = "^1.1.0"
mutmut = "^3.2.3"
lizard = "^1.17.28"
locust = "^2.37.0"
async-lru = "^2.0.5"
streamlit = "^1.45.0"
streamlit-extras = "^0.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
